# CADEX

./: CMakeLists.txt  README  build.sh  main.cpp
include/: Circles.h  Curves.h  Elipses.h  Helixes3D.h  Point3D.h  Vector3D.h
src/: Circles.cpp  Curves.cpp  Elipses.cpp  Helixes3D.cpp  Point3D.cpp  Vector3D.cpp
